--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "firebase": "^10.13.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.4",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
