--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "type": "module",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+    "serve": "cross-env NODE_ENV=development firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "firebase-functions-test": "^3.1.0"
   },
   "private": true
