--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.0.0",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
